Changes for Heroku

--- a/classics.html
+++ b/classics.html
@@ -49,10 +49,7 @@
       }
     }
   </style>
-
-
 </head>
-
 <body class="index-body">
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -67,9 +64,11 @@
                 Works
               </a>
               <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Work & Pay</a></li>
-                <li><a class="dropdown-item" href="#">BookMe</a></li>
-                <li><a class="dropdown-item" href="#">W & P App</a></li>
+                <li><a class="dropdown-item" href="/#worknpay">Work&Pay</a></li>
+                <li><a class="dropdown-item" href="/#bookme">BookMe</a></li>
+                <li><a class="dropdown-item" href="/#kardiocare">KardioCare</a></li>
+                <li><a class="dropdown-item" href="/#elib">Elib</a></li>
+                <li><a class="dropdown-item" href="/#lnet">LNet</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -102,7 +101,6 @@
       </div>
     </nav>
   </header>
-
   <main>
     <div class="container">
       <div class="row">
@@ -148,54 +146,54 @@
             <p class="date-cls"><i class="fa fa-calendar"></i>August 06, 2018</p>
             <p class="text-cls">Five years went by like the wind. However, I was focused on my Accounting
               profession and ended up working in an IT company, Accounts Department. Then I signed up for a Python
-            course that never got started. However, researching into the preconditions required to study software development
+              course that never got started. However, researching into the preconditions required to study software development
               revealed the following;
-              <ul class="text-cls">
-                <li class="text-sub-title">Self-Reliance</li>
-                <p>Keeping in mind that the only way to eat an elephant is a bite at a time, pick something and start.
+            <ul class="text-cls">
+              <li class="text-sub-title">Self-Reliance</li>
+              <p>Keeping in mind that the only way to eat an elephant is a bite at a time, pick something and start.
                 There will be times where you want to give up, or have someone else show you how to do something,
                 but the more you resist those urges and try and fail on your own, the greater your longterm success.</p>
-                <li class="text-sub-title">Choose a Scripting Language</li>
-                <p>So which language to begin with? That has a lot to do with what you’re trying to accomplish,
-                  but there are three that stand out for their multi-faceted applications, consistent utility
-                  and accessibility to beginners. These three are Python, Ruby and JavaScript.</p>
-                <li class="text-sub-title">Logic</li>
-                <p>So how do you build up your logic skills? Treat them like muscles, and exercise them.
-                   There are tools which gives you challenges/problems that will develop your
-                   reasoning. Another way to build logic skills is through conditional thinking, which
-                   essentially means, if this, then that.</p>
-                <li class="text-sub-title">Attention to Detail</li>
-                <p> What you won’t NEED to have learned, or have prerequisite abilities, will be mitigated
-                  by how closely you can pay attention to details. The understanding of the interconnectivity
-                  in commands, general awareness and lingual precision are all extremely important parts
-                  of a coder’s toolkit.</p>
-                <li class="text-sub-title">Recognition of Stupidity</li>
-                <p>This could also be “understanding how computers think.” We’ve all been told not to
-                  make assumptions, but assuming common sense on behalf of a computer while programming
-                  or coding is a recipe for disaster.</p>
-                <li class="text-sub-title">Abstract Thinking</li>
-                <p>Abstract thinking is thinking done without the object of the thought present,
-                  or even physical. It’s a foundation of coding. Because the written code, and
-                  what it produces can never be observed and measured physically, successful
-                  coders have to develop an ability to think abstractly, in larger, more comparative
-                  ways than they may be used to.</p>
-                <li class="text-sub-title">Patience</li>
-                <p>Coding is extremely difficult. Nothing that you’ve read here, or read somewhere else should be
-                  interpreted differently. At all stages, but especially when beginning, you should expect to feel
-                  extreme frustration. However, your ability to withstand that frustration, and move through it,
-                  without letting it discourage you will serve you in all that you do.</p>
-                <li class="text-sub-title">Strong Memory</li>
-                <p>While working with the same languages, you’ll internalize syntax, and it will feel less like using
-                  memory and more second nature to recall important commands.</p>
-                <li class="text-sub-title">Scientific Method</li>
-                <p>The problems/challenges of coding can seem infinite, daunting, and impossible to begin.
-                  That’s where using the scientific method to break down obstacles and projects themselves can become extremely helpful.</p>
-                <li class="text-sub-title">Communication and Empathy</li>
-                <p>Perhaps the most overlooked aspect of programming has little to do with the manual and mental labor of writing code.
-                  Coding is an insular world that effects our lives more each day. Coders need to be able to work with, and explain what
-                  they do to employers, clients, consumers and coworkers that don’t understand what they do.</p>
-              </ul>
-              <a class="text-clss" href="https://www.computersciencezone.org/10-skills-necessary-coding/">computersciencezone.org</a>
+              <li class="text-sub-title">Choose a Scripting Language</li>
+              <p>So which language to begin with? That has a lot to do with what you’re trying to accomplish,
+                but there are three that stand out for their multi-faceted applications, consistent utility
+                and accessibility to beginners. These three are Python, Ruby and JavaScript.</p>
+              <li class="text-sub-title">Logic</li>
+              <p>So how do you build up your logic skills? Treat them like muscles, and exercise them.
+                There are tools which gives you challenges/problems that will develop your
+                reasoning. Another way to build logic skills is through conditional thinking, which
+                essentially means, if this, then that.</p>
+              <li class="text-sub-title">Attention to Detail</li>
+              <p> What you won’t NEED to have learned, or have prerequisite abilities, will be mitigated
+                by how closely you can pay attention to details. The understanding of the interconnectivity
+                in commands, general awareness and lingual precision are all extremely important parts
+                of a coder’s toolkit.</p>
+              <li class="text-sub-title">Recognition of Stupidity</li>
+              <p>This could also be “understanding how computers think.” We’ve all been told not to
+                make assumptions, but assuming common sense on behalf of a computer while programming
+                or coding is a recipe for disaster.</p>
+              <li class="text-sub-title">Abstract Thinking</li>
+              <p>Abstract thinking is thinking done without the object of the thought present,
+                or even physical. It’s a foundation of coding. Because the written code, and
+                what it produces can never be observed and measured physically, successful
+                coders have to develop an ability to think abstractly, in larger, more comparative
+                ways than they may be used to.</p>
+              <li class="text-sub-title">Patience</li>
+              <p>Coding is extremely difficult. Nothing that you’ve read here, or read somewhere else should be
+                interpreted differently. At all stages, but especially when beginning, you should expect to feel
+                extreme frustration. However, your ability to withstand that frustration, and move through it,
+                without letting it discourage you will serve you in all that you do.</p>
+              <li class="text-sub-title">Strong Memory</li>
+              <p>While working with the same languages, you’ll internalize syntax, and it will feel less like using
+                memory and more second nature to recall important commands.</p>
+              <li class="text-sub-title">Scientific Method</li>
+              <p>The problems/challenges of coding can seem infinite, daunting, and impossible to begin.
+                That’s where using the scientific method to break down obstacles and projects themselves can become extremely helpful.</p>
+              <li class="text-sub-title">Communication and Empathy</li>
+              <p>Perhaps the most overlooked aspect of programming has little to do with the manual and mental labor of writing code.
+                Coding is an insular world that effects our lives more each day. Coders need to be able to work with, and explain what
+                they do to employers, clients, consumers and coworkers that don’t understand what they do.</p>
+            </ul>
+            <a class="text-clss" href="https://www.computersciencezone.org/10-skills-necessary-coding/">computersciencezone.org</a>
             </p>
           </div>
         </div>
@@ -208,7 +206,7 @@
             <p class="date-cls"><i class="fa fa-calendar"></i>December 25, 2019</p>
             <p class="text-cls">Enough was enough. I resolved to leave it all behind and set myself on the path that I have always wanted to journey.</p>
             <p class="text-cls">This time I need to commit everything in order to attain some sort of self satisfaction.</p>
-              <p class="text-cls">Hence I redirected my career path permanently to study software development.</p>
+            <p class="text-cls">Hence I redirected my career path permanently to study software development.</p>
           </div>
         </div>
       </div>
@@ -219,11 +217,11 @@
             <h1 class="cls-title">300 Multiple Choices</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>April 18, 2020</p>
             <p class="text-cls">Several options available in the software development space made it difficult to arrive at a decision on which option to choose.
-            Should I do a self-study? Or attend a bootcamp? In both situations, which language do I focus on?</p>
+              Should I do a self-study? Or attend a bootcamp? In both situations, which language do I focus on?</p>
             <p class="text-cls">Friends in the industry kept giving conflicting information.
-          Start with Python someone said. Another insisted on Javascript. Web applications will help you land a job faster. Others insisted, Mobile development is
-        the way to go, it is the future.</p>
-        <p class="text-cls">Just like every other profession, the software space if full of multiple choices. </p>
+              Start with Python someone said. Another insisted on Javascript. Web applications will help you land a job faster. Others insisted, Mobile development is
+              the way to go, it is the future.</p>
+            <p class="text-cls">Just like every other profession, the software space if full of multiple choices. </p>
           </div>
         </div>
       </div>
@@ -234,10 +232,10 @@
             <h1 class="cls-title">101 Switching Protocols.</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>May 27, 2020</p>
             <p class="text-cls">Finally a decision was made to go with self-study. Bought a course on Udemy and started Full Stack Web Devlopment.
-            3 months into the course momentum began to slow and I hadn't covered much.</p>
+              3 months into the course momentum began to slow and I hadn't covered much.</p>
             <p class="text-cls">Work shedules didnt make it any easier. Didn't have anybody to work with,
-            no course mates to share ideas with like I was used to in the traditional way of learning. I was told it was a lonely path to thread upon
-            but I did envisage it was going to be this lonely.</p>
+              no course mates to share ideas with like I was used to in the traditional way of learning. I was told it was a lonely path to thread upon
+              but I did envisage it was going to be this lonely.</p>
             <p class="text-cls">I asked myself, is this not all I have ever wanted? What has changed? Did I switch protocols too early?</p>
           </div>
         </div>
@@ -249,7 +247,7 @@
             <h1 class="cls-title">426 Upgrade Required.</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>November 5, 2020</p>
             <p class="text-cls">It's time to upgrade since the server has refused to perform my request using the current protocols. I upgraded by signing up
-            to Nucamp Coding Bootcamp. This turned out to be the best upgrade ever.</p>
+              to Nucamp Coding Bootcamp. This turned out to be the best upgrade ever.</p>
             <p class="text-cls">At last I was back on track to fulfill my life's long dream.</p>
           </div>
         </div>
@@ -372,7 +370,7 @@
             <h1 class="cls-title">200 OK</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>May 1, 2021</p>
             <p class="text-cls">OK, now we are here and you are able to access this page because I have successfully completed
-              the Bootcamp, which is the preliminary stage of becoming a guru in software development. Its been a wonderful journey and it all began with a step.  </p>
+              the Bootcamp, which is the preliminary stage of becoming a guru in software development. Its been a wonderful journey and it all began with a step. </p>
           </div>
         </div>
       </div>
@@ -384,7 +382,7 @@
             <p class="date-cls"><i class="fa fa-calendar"></i>May 7, 2021</p>
             <p class="text-cls">To continue, I sometimes wonder what the future holds in software development for me. Do I focus on Front End or Back End, Web or Mobile?
               For now, I am a Full Stack Developer but I don't want to be a Jack of all trades and a Master of none, hence I need to specialize.</p>
-              <p class="text-cls">I've been told that a programmer's direction is usually highly dependent on his work environment. Nonetheless, I hope to find some clarity as I learn more.</p>
+            <p class="text-cls">I've been told that a programmer's direction is usually highly dependent on his work environment. Nonetheless, I hope to find some clarity as I learn more.</p>
           </div>
         </div>
       </div>
@@ -406,7 +404,6 @@
       </div>
     </div>
   </main>
-
   <footer>
     <div class="container">
       <div class="row">
@@ -429,13 +426,13 @@
         </div>
       </div>
     </div>
-
   </footer>
 
   <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <!-- <script src="audio.js"></script> -->
   <script>
     $(document).ready(function() {
