--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
       }
     }
   </style>
-
-
 </head>
-
 <body class="index-body">
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -64,9 +61,11 @@
                 Works
               </a>
               <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Work & Pay</a></li>
-                <li><a class="dropdown-item" href="#">BookMe</a></li>
-                <li><a class="dropdown-item" href="#">W & P App</a></li>
+                <li><a class="dropdown-item" href="#worknpay">Work&Pay</a></li>
+                <li><a class="dropdown-item" href="#bookme">BookMe</a></li>
+                <li><a class="dropdown-item" href="#kardiocare">KardioCare</a></li>
+                <li><a class="dropdown-item" href="#elib">Elib</a></li>
+                <li><a class="dropdown-item" href="#lnet">LNet</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -107,7 +106,6 @@
         <div class="c-hero-sub col-lg-8">I develop both Mobile and Web Applications that help solve daily business and social challenges.
           My goal is to develop end-to-end applications that challenge the status quo.</div>
       </div>
-
       <div class="col-md-6">
         <p class="slide_text">Familiar Technologies</p>
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -149,73 +147,106 @@
       </div>
   </section>
   <main>
-    <!-- <section class=" py-5 text-center container">
-      <div class="row py-lg-5">
-        <div class="col-lg col-md-8 mx-auto">
-          <h1 class="fw-light" style="color: white">Projects Catalogue</h1>
-          <p class="lead text-muted">Applications are grouped into Web and Mobile Apps. Web Apps ranges from static websites for
-            companies to dynamic ones with several api integrations. Web apps span from those that help monitor road construction projects to
-            financial apps specifically forex and investment apps.</p>
-        </div>
-      </div>
-
-    </section> -->
     <div class="web_app text-center">Web apps</div>
+    <p class="hint text-center" style="color:#aaaaaa;margin-top:-20px;">Hint: All works are in progress</p>
     <div class="album py-5">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-          <div class="col">
+          <div id="worknpay" class="col">
             <div class="card shadow-sm">
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Newsletter Signup" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Newsletter Signup</title>
+                <title>Work&Pay</title>
                 <rect width="100%" height="100%" fill="white" />
-                <a href="https://shielded-gorge-23800.herokuapp.com/">
-                  <image xlink:href="/images/news.png" width="100%" height="100%" x="0" y="0" />
+                <a href="/">
+                  <image xlink:href="/images/wnp.jpeg" width="100%" height="100%" x="0" y="0" />
                 </a>
               </svg>
               <div class="card-body">
-                <p class="card-text">This is a Newsletter Signup project with Mailchimp api to help subscribe individuals for organisation's newsletters</p>
+                <p>Work&Pay</p>
+                <p class="card-text">A vehicle hire-purchase company where potential drivers are connected to vehicle owners.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="https://shielded-gorge-23800.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">View Project</button></a>
+                    <a href="/"><button type="button" class="btn btn-sm btn-outline-secondary">View Project</button></a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col">
+          <div id="bookme" class="col">
             <div class="card shadow-sm">
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Work&Pay Ltd website" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Work&Pay Ltd Website</title>
+                <title>BookMe</title>
                 <rect width="100%" height="100%" fill="white" />
-                <a href="https://localhost:3443">
-                  <image xlink:href="/images/workpay.png" width="100%" height="100%" x="0" y="0" />
+                <a href="/">
+                  <image xlink:href="/images/bookme.jpg" width="100%" height="100%" x="0" y="0" />
                 </a>
               </svg>
               <div class="card-body">
-                <p class="card-text">A vehicle hire-purchase company website where potential drivers are connected to vehicle owners via the web application.</p>
+                <p>BookMe</p>
+                <p class="card-text">An appointment scheduling application to enhance time management and service delivery in organisations.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" href="https://localhost:3443" class="btn btn-sm btn-outline-secondary">View Project</button>
+                    <button type="button" href="/" class="btn btn-sm btn-outline-secondary">View Project</button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col">
+          <div id="kardiocare" class="col">
             <div class="card shadow-sm">
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Yodem Forex App" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Yodem Forex App</title>
+                <title>KardioCare</title>
                 <rect width="100%" height="100%" fill="white" />
-                <a href="https://localhost:5000">
-                  <image xlink:href="/images/yodem.png" width="100%" height="100%" x="0" y="0" />
+                <a href="/">
+                  <image xlink:href="/images/kardiocare.jpg" width="100%" height="100%" x="0" y="0" />
                 </a>
               </svg>
               <div class="card-body">
-                <p class="card-text">A forex web application which allows travellors to purchase foreign currency on the go.</p>
+                <p>KardioCare</p>
+                <p class="card-text">A health monitoring application to assist doctors and pharmacist check patients' vitals remotely.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" href="https://localhost:5000" class="btn btn-sm btn-outline-secondary">View Project</button>
+                    <button type="button" href="/" class="btn btn-sm btn-outline-secondary">View Project</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="elib" class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Newsletter Signup" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>Elib</title>
+                <rect width="100%" height="100%" fill="white" />
+                <a href="/">
+                  <image xlink:href="/images/elibb.png" width="100%" height="100%" x="0" y="0" />
+                </a>
+              </svg>
+              <div class="card-body">
+                <p>Elib</p>
+                <p class="card-text">A library application to make it easy for people to donate physical books for rural community libraries.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="/"><button type="button" class="btn btn-sm btn-outline-secondary">View Project</button></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="lnet" class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Newsletter Signup" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>LNet</title>
+                <rect width="100%" height="100%" fill="white" />
+                <a href="/">
+                  <image xlink:href="/images/lnet.png" width="100%" height="100%" x="0" y="0" />
+                </a>
+              </svg>
+              <div class="card-body">
+                <p>LNet</p>
+                <p class="card-text">A learning portal designed for organisations to train employees whiles tracking their progress.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="/"><button type="button" class="btn btn-sm btn-outline-secondary">View Project</button></a>
                   </div>
                 </div>
               </div>
@@ -226,6 +257,7 @@
     </div>
     <section>
       <div class="web_app text-center" style="color: white">Mobile apps</div>
+      <p class="hint text-center" style="color:#aaaaaa;margin-top:-20px;">Hint: All works are in progress</p>
       <div class="container">
         <div class="row">
           <div class="column">
@@ -234,17 +266,20 @@
             </div>
           </div>
           <div class="column">
-            <div class="icon-text1 d-flex justify-content-start align-items-center" style="color: #fcf8ec">
-              <img class="app-icon rounded" src="/images/idea-circle.png" alt="">Ideahub App
+            <div class="icon-text1 d-flex justify-content-start align-items-center" style="color: #0779e4;font-weight: bold">
+              <img class="app-icon rounded" src="/images/wnp-circle.png" alt="">Work&Pay App
             </div>
-            <div class="icon-text2 d-flex justify-content-end align-items-center" style="color: #cad315">
-              <img class="app-icon rounded" src="/images/kardio-circle.png" alt="">Kadiocare App
+            <div class="icon-text1 d-flex justify-content-end align-items-center" style="color: #ff577f;font-weight: bold">
+              <img class="app-icon rounded" src="/images/bookme-circle.png" alt="">BookMe App
             </div>
-            <div class="icon-text1 d-flex justify-content-start align-items-center" style="color: #ff577f">
-              <img class="app-icon rounded" src="/images/team-circle.png" alt="">Team App
+            <div class="icon-text2 d-flex justify-content-start align-items-center" style="color: #cad315;font-weight: bold">
+              <img class="app-icon rounded" src="/images/kardio-circle.png" alt="">Kardiocare App
             </div>
-            <div class="icon-text2 d-flex justify-content-end align-items-center" style="color: #32e0c4">
-              <img class="app-icon rounded" src="/images/book-circle.png" alt="">Library App
+            <div class="icon-text1 d-flex justify-content-end align-items-center" style="color: #32e0c4;font-weight: bold">
+              <img class="app-icon rounded" src="/images/elibb-circle.png" alt="">Elib App
+            </div>
+            <div class="icon-text1 d-flex justify-content-start align-items-center" style="color: #be79df;font-weight: bold">
+              <img class="app-icon rounded" src="/images/lnet-circle.png" alt="">LNet App
             </div>
             <div class="icon-text2 d-flex justify-content-around">
               <h5 class="anime" data-text="Creativity & Logic...">Creativity & Logic...</h5>
@@ -276,16 +311,13 @@
         </div>
       </div>
     </div>
-
   </footer>
 
   <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-  <script src="js/scripts.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 </body>
 
