--- a/about.html
+++ b/about.html
@@ -49,10 +49,7 @@
       }
     }
   </style>
-
-
 </head>
-
 <body class="index-body">
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -67,9 +64,11 @@
                 Works
               </a>
               <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Work & Pay</a></li>
-                <li><a class="dropdown-item" href="#">BookMe</a></li>
-                <li><a class="dropdown-item" href="#">W & P App</a></li>
+                <li><a class="dropdown-item" href="/#worknpay">Work&Pay</a></li>
+                <li><a class="dropdown-item" href="/#bookme">BookMe</a></li>
+                <li><a class="dropdown-item" href="/#kardiocare">KardioCare</a></li>
+                <li><a class="dropdown-item" href="/#elib">Elib</a></li>
+                <li><a class="dropdown-item" href="/#lnet">LNet</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -102,7 +101,6 @@
       </div>
     </nav>
   </header>
-
   <main>
     <div class="container" style="color: white">
       <div class="row">
@@ -127,7 +125,6 @@
         </div>
       </div>
     </div>
-
     <div class="container" style="color: white">
       <div class="row">
         <div class="brief" style="color: white">
@@ -279,7 +276,6 @@
         </div>
       </div>
   </main>
-
   <footer>
     <div class="container">
       <div class="row">
@@ -302,15 +298,11 @@
         </div>
       </div>
     </div>
-
   </footer>
-
   <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-</body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 </html>
