--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               <img class="app-icon rounded" src="/images/lnet-circle.png" alt="">LNet App
             </div>
             <div class="icon-text2 d-flex justify-content-around">
-              <h5 class="anime" data-text="Logical Creativity...">Logical Creativity...</h5>
+              <h5 class="anime" data-text="Logical Creativity">Logical Creativity</h5>
             </div>
           </div>
         </div>
